--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,53 @@
+@font-face {
+    font-family: "Creepy";
+    src: url("Assets/Fonts/Creepy.woff") format("woff"), url("Assets/Fonts/Creepy.woff2") format("woff2"),
+}
+
+@font-face {
+    font-family: "Lunacy";
+    src: url("Assets/Fonts/Lunacy.woff") format("woff"), url("Assets/Fonts/Lunacy.woff2") format("woff2"),
+}
+
+*  {
+    box-sizing: border-box;
+}
+
+html {
+    min-height: 100vh;
+}
+
+body { 
+     margin: 0;
+     background: radial-gradient(#9D5900,#3D2200);
+}
+
+.page-title {
+    color: #d0ff00;
+    font-family: Creepy,serif;
+    font-weight: normal;
+    text-align: center;
+    font-size: 6em;
+}
+
+.game-info {
+     font-family: Lunacy,serif;
+     color: #FFBB89;
+     /* height: 20vh; */
+     margin-top: -34px;
+     margin-top: 1px;
+     text-align: center;
+     font-size: 1.8em;
+}
+
+
+
+
+
+
+
+
+
+
 #board{
     width: 900px;
 	height: 289px;
